--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,37 +1,38 @@
 name: Publish to npm
 
 on:
-    push:
-        branches:
-            - master
+  push:
+    branches:
+      - master
 
 jobs:
-    publish:
-        runs-on: ubuntu-latest
+  publish:
+    runs-on: ubuntu-latest
 
-        steps:
-            # Checkout Code
-            - name: Checkout Code
-              uses: actions/checkout@v2
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-            # Set up Nodejs
-            - name: Set Up Nodejs
-              uses: actions/setup-node@v3
-              with:
-                node-version: "18"
-            
-            # Install Dependencies
-            - name: Install Dependencies
-              run: npm install
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18"
+          registry-url: "https://registry.npmjs.org"
 
-            # Run tests
-            - name: Run tests
-              run: npm run test
+      - name: Configure Git
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
 
-            # Publish too npm 
-            - name: Publish to npm
-              run: | 
-                npm version patch -m "Upgrade to %s"
-                npm publish
-              env: 
-                NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm run test
+
+      - name: Publish to npm
+        run: |
+          npm version patch -m "Upgrade to %s"
+          npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
